--- a/src/app/neon-form/neon-form.component.html
+++ b/src/app/neon-form/neon-form.component.html
@@ -32,7 +32,7 @@
           <div class="neon-wizard-header">
             <h5>Importer votre image</h5>
           </div>
-          <input (change)="onSelectFile($event)"  type="file"   class="basic-input-admin"/>
+          <input (change)="onSelectFile($event)"  type="file"   class="basic-input-form"/>
 <!-- 
           <div   class="money">
               <input (change)="onSelectFile($event)" type="text" class="numberOnly" autocomplete="off" maxlength="8" /><div>$</div>                      
