--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -24,8 +24,10 @@
                       <option selected disabled>Choisit un filtre</option>
                       <option value="Created">Created</option>
                       <option value="DT disponible">DT disponible</option>
-                      <option value="Commandé">Commandé</option>
                       <option value="Payé">Payé</option>
+                      <option disabled>------------------------</option>
+                      <option value="Consumer">Consumer</option>
+                      <option value="Business">Business</option>
                       <option disabled>------------------------</option>
                       <option value="Billie">Billie</option>
                       <option value="Cobby">Cobby</option>
