--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -261,143 +261,9 @@
 </div>
 
 
-<div class="ec-bigbox" *ngIf="payMode">
-    <button  style="margin-bottom: 1.5%;" class="prev-btn" (click)="previous();">Précédent</button>
-
-  <div class="row commandMainCont">
-    <div class="col-6 command-form-cont">
-      <h2>Mode de Paiement</h2>
-      <div class="command-form-card-payer row">
-          <h2>Carte bancaire</h2>
-
-          <div class=' livraisonRow user-info-row-cont'>
-              <span class="user-info-row-title">Numéro de carte</span>
-                <input  (change)="onChangeCommandInfo('adresse', $event.target.value)"  class="basic-input "/>
-  
-            </div>
-        <div class="row livraisonRow">
-            <div class='user-info-row-cont nestedInput col-5'>
-                <span class="user-info-row-title">Date d'expiration</span>
-                  <input  (change)="onChangeCommandInfo('prénom', $event.target.value)"  class="basic-input  "/>
-              </div>
-  
-              <div class="col-2"></div>
-            <div class='user-info-row-cont nestedInput col-5'>
-                <span class="user-info-row-title">Code de sécurité</span>
-                  <input (change)="onChangeCommandInfo('nom', $event.target.value)"   class="basic-input "/>
-              </div>
-
-        </div>
-
-        <!-- <div class=' livraisonRow user-info-row-cont'>
-            <span class="user-info-row-title">Société (facultatif)</span>
-              <input (change)="onChangeCommandInfo('société', $event.target.value)"   class="basic-input "/>
-
-          </div> -->
 
 
-
-            <span *ngIf="commandFailed" class='errorMessage'>{{errorMessage}}</span>
-            <button  (click)="command();" style="margin-right: 5%;;" class="next-btn">Valider et payer</button>
-            <!-- <button *ngIf="neonSelected.state === 'commandé'"  (click)="openCommand();" style="margin-right: 5%;" class="next-btn">Payer</button> -->
-
-      </div>
-
-    </div>
-    <div class="col-1"></div>
-    <div class="col-5">
-      <div class="big-card  ">
-        <!-- <div class="card_image">
- 
-        </div> -->
-        <div style="padding: 0 !important" class="card_content">
-         <span style='margin-left: 20px !important; margin-top: 3%;' class="ec-card-title">
-           Récapitulatif
-         </span>
-
-         <div  class="recapList row">
-            <div  style='margin-left: 20px !important;' class="row">
-              <div class="col-5">Néon LED "{{neonSelected.text}}"</div>
-              <div class="col-2"></div>
-              <div class="col-5">{{neonSelected.price}}$</div>
-
-            </div>
-
-            <div style='margin-left: 20px !important;' class="row">
-              <div class="col-5">Livraison</div>
-              <div class="col-2"></div>
-              <div class="col-5">Gratuit</div>
-
-            </div>
-
-         </div>
-  
-         <div class=" ttcList">
-          <div class="col-4 ttc">Total TTC</div>
-          <div class="col-4 ttc">{{neonSelected.price}}$</div>
-
-        </div>
-       </div>
-       </div>
-
-
-       <div class="big-card  ">
-          <!-- <div class="card_image">
-   
-          </div> -->
-          <div style="padding: 0 !important" class="card_content">
-           <span style='margin-left: 20px !important; margin-top: 3%;' class="ec-card-title">
-             Adresse de livraison
-           </span>
-  
-           <div  class="recapList row">
-              <div  style='margin-left: 20px !important;' class="row">
-                <!-- <div class="col-5">Néon LED "{{neonSelected.text}}"</div>
-                <div class="col-2"></div> -->
-                <div class="col-5">{{commandInfos.adresse}}</div>
-  
-              </div>
-  
-              <div  style='margin-left: 20px !important;' class="row">
-                  <!-- <div class="col-5">Néon LED "{{neonSelected.text}}"</div>
-                  <div class="col-2"></div> -->
-                  <div class="col-5">{{commandInfos['code-postal']}}, {{commandInfos.ville}}</div>
-    
-                </div>
-                <div  style='margin-left: 20px !important;' class="row">
-                    <!-- <div class="col-5">Néon LED "{{neonSelected.text}}"</div>
-                    <div class="col-2"></div> -->
-                    <div class="col-5">{{commandInfos.pays}}</div>
-      
-                  </div>
-           </div>
-    
-         
-         </div>
-         </div>
-    </div>
-
-  </div>
-
-  <div class="row commandBotCont">
-    <div class="col-6 command-form-cont">
-      <h2>Mode de livraison</h2>
-      <div class="tiny-card">
-          <!-- <input style="margin-right: 10px; align-self: center;" type="checkbox" /> -->
-          <div class="livraisonDom">Livraison à domicile: 15 jours ouvrés</div>
-        </div>
-
-
-            <!-- <button   class="next-btn">Passer au paiement</button> -->
-
-    </div>
-  </div>
-
-</div>
-
-
-
-<div class="ec-bigbox" *ngIf="commandMode && neonSelected">
+<div class="ec-bigbox" *ngIf="commandMode && neonSelected && !payMode">
     <button  style="margin-bottom: 1.5%;" class="prev-btn" (click)="previous();">Précédent</button>
 
   <div class="row commandMainCont">
@@ -408,13 +274,13 @@
         <div class="row livraisonRow">
             <div class='user-info-row-cont nestedInput col-5'>
                 <span class="user-info-row-title">Prénom</span>
-                  <input  (change)="onChangeCommandInfo('prénom', $event.target.value)"  class="basic-input  "/>
+                  <input  [value]="commandInfos['prénom']" (change)="onChangeCommandInfo('prénom', $event.target.value)"  class="basic-input  "/>
               </div>
   
               <div class="col-2"></div>
             <div class='user-info-row-cont nestedInput col-5'>
                 <span class="user-info-row-title">Nom</span>
-                  <input (change)="onChangeCommandInfo('nom', $event.target.value)"   class="basic-input "/>
+                  <input  [value]="commandInfos['nom']" (change)="onChangeCommandInfo('nom', $event.target.value)"   class="basic-input "/>
               </div>
 
         </div>
@@ -427,20 +293,20 @@
 
           <div class=' livraisonRow user-info-row-cont'>
               <span class="user-info-row-title">Adresse</span>
-                <input  (change)="onChangeCommandInfo('adresse', $event.target.value)"  class="basic-input "/>
+                <input [value]="commandInfos['adresse']" (change)="onChangeCommandInfo('adresse', $event.target.value)"  class="basic-input "/>
   
             </div>
 
             <div class="row livraisonRow">
                 <div class='user-info-row-cont nestedInput col-5'>
                     <span class="user-info-row-title">Ville</span>
-                      <input (change)="onChangeCommandInfo('ville', $event.target.value)"  class="basic-input  "/>
+                      <input  [value]="commandInfos['ville']" (change)="onChangeCommandInfo('ville', $event.target.value)"  class="basic-input  "/>
                   </div>
       
                   <div class="col-2"></div>
                 <div class='user-info-row-cont nestedInput col-5'>
                     <span class="user-info-row-title">Code postal</span>
-                      <input (change)="onChangeCommandInfo('code-postal', $event.target.value)"   class="basic-input "/>
+                      <input  [value]="commandInfos['code-postal']" (change)="onChangeCommandInfo('code-postal', $event.target.value)"   class="basic-input "/>
                   </div>
     
             </div>
@@ -449,13 +315,13 @@
             <div class="row livraisonRow">
                 <div class='user-info-row-cont nestedInput col-5'>
                     <span class="user-info-row-title">Pays</span>
-                      <input (change)="onChangeCommandInfo('pays', $event.target.value)"  class="basic-input  "/>
+                      <input  [value]="commandInfos['pays']" (change)="onChangeCommandInfo('pays', $event.target.value)"  class="basic-input  "/>
                   </div>
       
                   <div class="col-2"></div>
                 <div class='user-info-row-cont nestedInput col-5'>
                     <span class="user-info-row-title">Téléphone</span>
-                      <input (change)="onChangeCommandInfo('téléphone', $event.target.value)"   class="basic-input "/>
+                      <input  [value]="commandInfos['téléphone']" (change)="onChangeCommandInfo('téléphone', $event.target.value)"   class="basic-input "/>
                   </div>
     
             </div>
@@ -518,6 +384,138 @@
 
     </div>
   </div>
+
+</div>
+
+
+
+<div class="ec-bigbox" *ngIf="payMode">
+    <button  style="margin-bottom: 1.5%;" class="prev-btn" (click)="payMode = false">Précédent</button>
+
+  <div class="row commandMainCont">
+    <div class="col-6 command-form-cont">
+      <h2>Mode de Paiement</h2>
+      <div class="command-form-card-payer row">
+          <h2>Carte bancaire</h2>
+
+          <div class=' livraisonRow user-info-row-cont'>
+              <span class="user-info-row-title">Numéro de carte</span>
+                <input  (change)="onChangeCommandInfo('adresse', $event.target.value)"  class="basic-input "/>
+  
+            </div>
+        <div class="row livraisonRow">
+            <div class='user-info-row-cont nestedInput col-5'>
+                <span class="user-info-row-title">Date d'expiration</span>
+                  <input  (change)="onChangeCommandInfo('prénom', $event.target.value)"  class="basic-input  "/>
+              </div>
+  
+              <div class="col-2"></div>
+            <div class='user-info-row-cont nestedInput col-5'>
+                <span class="user-info-row-title">Code de sécurité</span>
+                  <input (change)="onChangeCommandInfo('nom', $event.target.value)"   class="basic-input "/>
+              </div>
+
+        </div>
+
+        <!-- <div class=' livraisonRow user-info-row-cont'>
+            <span class="user-info-row-title">Société (facultatif)</span>
+              <input (change)="onChangeCommandInfo('société', $event.target.value)"   class="basic-input "/>
+
+          </div> -->
+          <!-- <form #checkout="ngForm" (ngSubmit)="onSubmitPay()" class="checkout">
+              <div class="form-row">
+                <label for="card-info">Card Info</label>
+                <div id="card-info" #cardInfo></div>
+            
+                <div id="card-errors" role="alert" *ngIf="error">{{ error }}</div>
+              </div>
+            
+              <button type="submit">Pay $5</button>
+            </form> -->
+
+
+            <span *ngIf="commandFailed" class='errorMessage'>{{errorMessage}}</span>
+            <button  (click)="command();" style="margin-right: 5%;;" class="next-btn">Valider et payer</button>
+            <!-- <button *ngIf="neonSelected.state === 'commandé'"  (click)="openCommand();" style="margin-right: 5%;" class="next-btn">Payer</button> -->
+
+      </div>
+
+    </div>
+    <div class="col-1"></div>
+    <div class="col-5">
+      <div class="big-card  ">
+        <!-- <div class="card_image">
+ 
+        </div> -->
+        <div style="padding: 0 !important" class="card_content">
+         <span style='margin-left: 20px !important; margin-top: 3%;' class="ec-card-title">
+           Récapitulatif
+         </span>
+
+         <div  class="recapList row">
+            <div  style='margin-left: 20px !important;' class="row">
+              <div class="col-5">Néon LED "{{neonSelected.text}}"</div>
+              <div class="col-2"></div>
+              <div class="col-5">{{neonSelected.price}}$</div>
+
+            </div>
+
+            <div style='margin-left: 20px !important;' class="row">
+              <div class="col-5">Livraison</div>
+              <div class="col-2"></div>
+              <div class="col-5">Gratuit</div>
+
+            </div>
+
+         </div>
+  
+         <div class=" ttcList">
+          <div class="col-4 ttc">Total TTC</div>
+          <div class="col-4 ttc">{{neonSelected.price}}$</div>
+
+        </div>
+       </div>
+       </div>
+
+
+       <div class="big-card  ">
+          <!-- <div class="card_image">
+   
+          </div> -->
+          <div style="padding: 0 !important" class="card_content">
+           <span style='margin-left: 20px !important; margin-top: 3%;' class="ec-card-title">
+             Adresse de livraison
+           </span>
+  
+           <div  class="recapList2 row">
+              <div  style='margin-left: 20px !important;' class="row">
+                <!-- <div class="col-5">Néon LED "{{neonSelected.text}}"</div>
+                <div class="col-2"></div> -->
+                <div class="col-5">{{commandInfos.adresse}}</div>
+  
+              </div>
+  
+              <div  style='margin-left: 20px !important;' class="row">
+                  <!-- <div class="col-5">Néon LED "{{neonSelected.text}}"</div>
+                  <div class="col-2"></div> -->
+                  <div class="col-5">{{commandInfos['code-postal']}}, {{commandInfos.ville}}</div>
+    
+                </div>
+                <div  style='margin-left: 20px !important;' class="row">
+                    <!-- <div class="col-5">Néon LED "{{neonSelected.text}}"</div>
+                    <div class="col-2"></div> -->
+                    <div class="col-5">{{commandInfos.pays}}</div>
+      
+                  </div>
+           </div>
+    
+         
+         </div>
+         </div>
+    </div>
+
+  </div>
+
 
 </div>
 
