--- a/src/app/neon-form/neon-form.component.html
+++ b/src/app/neon-form/neon-form.component.html
@@ -255,7 +255,7 @@
       <aw-wizard-step stepTitle="" class="col-6">
 
         <div *ngIf="projectType === 'consumer'" class="step-container">
-          <h5 class="neon-wizard-header ">Obtenez votre dessin technique en créeant votre espace !</h5>
+          <h5 class="neon-wizard-header ">Obtenez votre dessin technique en {{suceMaBite}}</h5>
 
 
 
@@ -310,7 +310,7 @@
                 <div></div>
               </div>
             </label>
-            <span class="tailleperso">Déja membre ?</span>
+            <span class="tailleperso">Déjà membre ?</span>
           </div>
           <!-- <span (click)="signuptrue()"  style='margin-top: -10px;' class='user-info-row-title textcenter'>Déja membre ? <a  href="#">Connexion</a></span> -->
 
