--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="neonSelected === 'none'" class="row   ">
     <div class='admin-list-title col-12'>
-      <h2 class="admin-title">Vue Globale: {{numOfCommands}} commandes dont {{numOfCreated}} créées , {{numOfDT}} DT Disponibles, {{numOfPayes}} payées</h2>
+      <h2 class="admin-title">Vue Globale: {{numOfCommands}} demandes dont {{numOfCreated}} en attente , {{numOfDT}} traitées, {{numOfPayes}} payées</h2>
     </div>
 
     <div *ngIf="neonSelected === 'none'" class="admin-list-cont col-12 row">
@@ -19,7 +19,7 @@
 
             <th >Filtrer
                 <div class="select">
-                    <select (change)="filterCommand($event.target.value)"  name="slct" id="slct">
+                    <select (change)="filterCommand($event.target.value)"  name="slct" id="slct"> 
                       <option value="all">Tout voir</option>
                       <option selected disabled>Choisit un filtre</option>
                       <option value="Created">Created</option>
