send modif mail

--- a/src/app/neon-form/neon-form.component.html
+++ b/src/app/neon-form/neon-form.component.html
@@ -423,6 +423,7 @@
 
 
     </div>
+    </div>
 
     <div *ngIf="loading" class="blendContainer">
       <svg id="progress-circle" class="animation-circle" viewBox="0 0 50 50">
