--- a/src/app/neon-form/neon-form.component.scss
+++ b/src/app/neon-form/neon-form.component.scss
@@ -512,11 +512,12 @@ small {
   text-align: center;
   padding-top: 0.5%;
   background-color: white;
+  margin-right: 1%;
+    width: 49%;
   outline: none !important;
   /* height: 168px; */
   font-size: 2vw;
-  width: 50%;
-  padding-bottom: 1%;
+    padding-bottom: 1%;
   /* padding-bottom: 1%; */
   display: -webkit-box;
   display: flex;
