--- a/src/app/neon-list/neon-list.component.scss
+++ b/src/app/neon-list/neon-list.component.scss
@@ -54,6 +54,7 @@
 .ec-list-title {
   display: flex;
   margin-bottom: 2.5%;
+  align-self: center;
 }
 .ec-list-title h2 {
   margin-right: 5%;
@@ -224,7 +225,6 @@ td, th {
 padding: 10px; 
   text-align: left; 
   cursor: pointer;
-  padding-bottom: 20px;
   font-family: Mukta-Bold, sans-serif;
 }
 
@@ -355,7 +355,6 @@ box-shadow: 5pxs 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.
     display: flex;
     flex-direction: column;
     z-index: 10;
-    border: 1px solid #000b31;
     padding: 0;
     background-color: white;
 }
@@ -444,6 +443,79 @@ form.checkout {
 .StripeElement--webkit-autofill {
   background-color: #fefde5 !important;
 }
+
+.customHyperlink {
+  text-decoration: none;
+  list-style: none;
+  color: #000;
+}
+
+
+.modal-window {
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.6);
+    top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 999;
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s;
+  &:target {
+    visibility: visible;
+    opacity: 1;
+    pointer-events: auto;
+  }
+  &>div {
+    width: 50%;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 2em;
+    background: #ffffff;
+  }
+  header {
+    font-weight: bold;
+  }
+  h1 {
+    font-size: 150%;
+    margin: 0 0 15px;
+  }
+}
+
+.modal-close {
+  color: #aaa;
+  line-height: 50px;
+  font-size: 80%;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  top: 0;
+  width: 70px;
+  text-decoration: none;
+  &:hover {
+    color: black;
+  }
+}
+
+/* Demo Styles */
+
+
+
+
+.container {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.modal-window div:not(:last-of-type) {
+  margin-bottom: 15px;
+}
 .neon-canvas {
     // height: 85%;
     height: 100%;
@@ -456,7 +528,7 @@ form.checkout {
 }
 
 .neon-bar {
-  background-color: #F4F4F4;
+  background-color: rgba(0,0,0,0.10);
     display: flex;
     height: 15%;
 }
@@ -470,6 +542,7 @@ form.checkout {
 .neon-bar-item-cont {
   display: flex;
   flex-direction: column;
+  padding: 1em;
   flex: 1;
   height: 100%;
   margin-top: 5px;
@@ -582,7 +655,7 @@ form.checkout {
   justify-content: flex-start   ;
   border-radius: 7px;
   overflow-y: scroll;
-  height: 65%;
+  height: 70%;
     padding: 2em;
   box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
