--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <div class='login-container row'>
-    <div class="col-4"></div>
+    <div class="col-lg-4 col-md-2 col-sm-2 col-xs-2"></div>
 
-    <div class="step-container-inner col-4">
-            <h1 class='login-header'>{{isSignIn ? 'Connectez-vous à votre espace' : 'Créez votre compte      Psssst.......... c est gratuit !!'}}</h1>
+    <div class="step-container-inner col-lg-4 col-md-8 col-sm-8 col-xs-10">
+            <h1 class='login-header row'>{{isSignIn ? 'Connectez-vous à votre espace' : 'Créez votre compte      Psssst.......... c est gratuit !!'}}</h1>
             <div *ngIf="isSignIn" class="login-step-container">
 
                     <h2 class="login-title">Connectez vous à votre compte</h2>
@@ -54,7 +54,7 @@
             </div>
 </div>
    
-    <div class="col-4"></div>
+    <div class="col-lg-4 col-md-2 col-sm-2 col-xs-2"></div>
 
 </div>
 
@@ -67,4 +67,3 @@
 
 
 
-    
