--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,7 +15,9 @@
 
                      <div class='user-info-row-cont login-row'>
                             <span class="user-info-row-title">Mot de passe</span>
-                              <input type='password' (change)="onChangeUserInfo('password', $event.target.value)" [value]="password"  class="basic-input "/>
+                        <form>
+                          <input type='password' (change)="onChangeUserInfo('password', $event.target.value)" [value]="password"  class="basic-input "/>
+                        </form>
                               <a style="text-align: center; text-decoration: underline; margin-top: 3%;" href="#">J'ai oublié mon mot de passe</a>
 
                      </div>
@@ -45,8 +47,10 @@
 
                      <div class='user-info-row-cont login-row'>
                             <span class="user-info-row-title">Mot de passe</span>
-                              <input type='password' (change)="onChangeUserInfoSignUp('password', $event.target.value)" [value]="password"  class="basic-input "/>
-                              <a style="text-align: center; text-decoration: underline; margin-top: 3%;" href="#">J'ai oublié mon mot de passe</a>   
+                       <form>
+                         <input type='password' (change)="onChangeUserInfoSignUp('password', $event.target.value)" [value]="password"  class="basic-input "/>
+                       </form>
+                              <a style="text-align: center; text-decoration: underline; margin-top: 3%;" href="#">J'ai oublié mon mot de passe</a>
                               <div *ngIf="loginFailed" class="errorMessage">{{signUpError}}</div>
                      </div>
                             <button class="next-btn signup-btn " (click)="onSignUp()" type="button" >C'est parti</button> 
