--- a/src/styles.scss
+++ b/src/styles.scss
@@ -157,6 +157,12 @@
 .mb3 {
   margin-bottom: 1.5% !important;
 }
+.pt3 {
+  padding-top: 3% !important;
+}
+.pb3 {
+  padding-bottom: 3% !important;
+}
 .mt5 {
   margin-top: 5% !important;
 }
