--- a/src/app/neon-list/neon-list.component.scss
+++ b/src/app/neon-list/neon-list.component.scss
@@ -48,7 +48,7 @@
   padding-left: 2.5%;
   padding-right: 2.5%;
   padding-top: 2%;
-  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
 }
 
 .ec-list-title {
@@ -96,7 +96,7 @@ h2 {
   padding: 1.3rem;
   height: 50px;
   border-radius: 10px;
-  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
   transition: 0.4s;
   flex-direction: row;
 }
@@ -107,7 +107,7 @@ h2 {
   padding: 0 !important;
   height: 250px;
   border-radius: 10px;
-  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
   transition: 0.4s;
   flex-direction: row;
 }
@@ -117,7 +117,7 @@ h2 {
   display: flex;
   height: 200px;
   border-radius: 10px;
-  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
   transition: 0.4s;
   flex-direction: row;
 }
@@ -128,7 +128,7 @@ h2 {
   display: flex;
   height: 250px;
   border-radius: 10px;
-  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
   transition: 0.4s;
   flex-direction: row;
 }
@@ -461,7 +461,7 @@ form.checkout {
   border-radius: 4px;
   border: 1px solid transparent;
   font-family: Nunito-Regular, sans-serif;
-  box-shadow: 0 1px 3px 0 #e6ebf1;
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
   -webkit-transition: box-shadow 150ms ease;
   transition: box-shadow 150ms ease;
 }
@@ -679,7 +679,7 @@ form.checkout {
   overflow-y: scroll;
   height: 87%;
     padding: 2em;
-  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
 }
 
 
@@ -693,7 +693,7 @@ form.checkout {
   overflow-y: scroll;
   height: 70%;
     padding: 2em;
-  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
 }
 // Main form styling
 
