--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -18,7 +18,7 @@
     padding-left: 2.5%;
     padding-right: 2.5%;
     padding-top: 2%;
-    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
 }
 
 .admin-list-title {
@@ -473,3 +473,4 @@ select {
     bottom:0;
   }
 }
+
